--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <input id="evLocation" type="text" placeholder="Auditorio, Aula, etc."/>
           </div>
           <div>
-            <label for="evTags">Etiquetas (coma)</label>
+            <label for="evTags">Escribe una palabra y haz clic en "Sugerir de Unsplash." Sugerirá la imagen para subir.</label>
             <input id="evTags" type="text" placeholder="salud, charla, feria"/>
           </div>
 
@@ -169,7 +169,7 @@
               Sugerir desde Unsplash
             </button>
             <small class="muted" style="display:block;margin-top:6px">
-              La imagen se guardará como <b>URL externa</b> (no se sube a Firebase Storage).
+              
             </small>
           </div>
         </div>
